[package]
name = "knitty2"
version = "0.1.0"
edition = "2021"
publish = false
license = "BSD-2-Clause"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dotenv = "0.15.0"
eyre = "0.6.8"
image = { version = "0.24.5", default-features = false, features = ["png"] }
serial = "0.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
